2002-06-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* mutopia/claop.py: new file: CLA(O)P II by Peter Wallin.

2002-06-19  Han-Wen  <hanwen@cs.uu.nl>

	* lily/parser.yy: various protection fixes. Less objects are now
	overprotected.

2002-06-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/bin/release.py (prev_ver): Bugfix: assume new diff
	naming scheme.

	* Documentation/windows/zlily-profile.sh:
	* Documentation/windows/post-lilypond.sh: Assume normal
	prefix=/usr for lilypond.

	* lily/musical-request.cc (length_mom): Display origin with error.

	* input/test/duration-check.ly: New file.

	* lily/lily-guile.cc (ly_pair_p): [PARANOID]: Check for freed
	cells.

	* lily/part-combine-music-iterator.cc (get_state): Bugfix: use
	ly_symbol2scm to get a scm symbol (rather than ly_str02scm).

	* aclocal.m4:
	* autogen.sh: Regenerate.
	
	* Documentation/topdocs/INSTALL.texi: 
	* configure.in: 
	* stepmake/configure.in:
	* stepmake/aclocal.m4: Revert autoconf upgrade.  Autoconf 2.53 has
	a serious bug wrt AC_CONFIG_AUX_DIR (reported).  Creating
	./configure once again requires autoconf == 2.13.

	* stepmake/autogen.sh: Check for autoconf == 2.13.

2002-06-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parser.yy (open_request_parens): add input locations to
	open and close parens. 

2002-06-17  Chris Jackson <chris@fluffhouse.org.uk>

	* lily/tuplet-bracket.cc:
	* lily/text-spanner.cc: 
	* lily/piano-pedal-engraver.cc: 
	* scm/grob-description.scm: 
	* scm/grob-property-description.scm: Changed the
	edge-width property of brackets to edge-widen. Changed the sign of
	the left element of edge-widen so a pair of equal numbers produces
	a symmetrical bracket.

2002-06-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* ly/espanol.ly: added.

	* lily/simple-spacer.cc (solve): remove assert.

2002-06-17  Han-Wen  <hanwen@cs.uu.nl>

	* lily/forbid-break-engraver.cc (class
	Forbid_line_break_engraver): new engraver: forbid linebreaks
	during playing notes
